warthog updates, nav fixes

--- a/index.html
+++ b/index.html
@@ -334,7 +334,7 @@ landing: yes
       <li><a href="/waterblast-tools-automated-equipment#surface" class="btn">Surfaces</a></li>
       <li><a href="/waterblast-tools-automated-equipment#tank" class="btn">Tanks/Vessels</a></li>
       <li><a href="/waterblast-tools-automated-equipment#boiler" class="btn">Boilers/Furnaces</a></li>
-      <li><a href="/waterblast-tools-automated-equipment#concrete" class="btn">Concrete</a></li>
+<!--      <li><a href="/waterblast-tools-automated-equipment#concrete" class="btn">Concrete</a></li>-->
       <li><a href="/sewer-tools" class="btn">Sewer Lines</a></li>
       <li><a href="/downhole-tools" class="btn">Downhole</a></li>
       <li><a href="#" data-featherlight="#search-box"><img src="/assets/img/icon_search_lg.png" alt="Search" style="width:20px; margin-left:15px;" /></a></li>
@@ -348,7 +348,7 @@ landing: yes
       <option value="/waterblast-tools-automated-equipment#surface">Surfaces</option>
       <option value="/waterblast-tools-automated-equipment#tank">Tanks/Vessels</option>
       <option value="/waterblast-tools-automated-equipment#boiler">Boilers/Furnaces</option>
-      <option value="/waterblast-tools-automated-equipment#concrete">Concrete</option>
+<!--      <option value="/waterblast-tools-automated-equipment#concrete">Concrete</option>-->
       <option value="/sewer-tools">Sewer Lines</option>
       <option value="/downhole-tools">Downhole</option>
     </select>
