--- a/manuals.html
+++ b/manuals.html
@@ -784,6 +784,30 @@ permalink: /manuals
                 <td class="text-center"><a href="/assets/pdf/reference/legacy/Obsolete_BJ-360.pdf" target="_blank" class="btn btn-sm">Notice</a></td>
               </tr>
               <tr>
+                <td>BJV-P16</td>
+                <td>10K PSI<br>Self-rotary swivel</td>
+                <td class="text-center"><a href="/assets/pdf/manuals/BJV-P16_Manual.pdf" target="_blank" class="btn btn-sm">PL 537</a><br><small class="grey">Current model: <a href="/assets/pdf/manuals/BJVE_manual.pdf">BJVE-P16</a>,<br>older versions supported until further notice</small></td>
+                <td class="text-center"></td>
+              </tr>
+              <tr>
+                <td>BJV-P12</td>
+                <td>15K PSI<br>Self-rotary swivel</td>
+                <td class="text-center"><a href="/assets/pdf/manuals/BJV-P12_Manual.pdf" target="_blank" class="btn btn-sm">PL 504</a><br><small class="grey">Current model: <a href="/assets/pdf/manuals/BJVE_manual.pdf">BJVE-P12</a>,<br>older versions supported until further notice</small></td>
+                <td class="text-center"></td>
+              </tr>
+              <tr>
+                <td>BJV-M24</td>
+                <td>22K PSI<br>Self-rotary swivel</td>
+                <td class="text-center"><a href="/assets/pdf/manuals/BJV-M24_Manual.pdf" target="_blank" class="btn btn-sm">PL 509</a><br><small class="grey">Current model: <a href="/assets/pdf/manuals/BJVE_manual.pdf">BJVE-M24</a>,<br>older versions supported until further notice</small></td>
+                <td class="text-center"></td>
+              </tr>
+              <tr>
+                <td>BJV-MP12</td>
+                <td>22K PSI<br>Self-rotary swivel</td>
+                <td class="text-center"><a href="/assets/pdf/manuals/BJV-MP12_Manual.pdf" target="_blank" class="btn btn-sm">PL 506</a><br><small class="grey">Current model: <a href="/assets/pdf/manuals/BJVE_manual.pdf">BJVE-MP12</a>,<br>older versions supported until further notice</small></td>
+                <td class="text-center"></td>
+              </tr>
+              <tr>
                 <td>BNS</td>
                 <td>Shrouded Banshee</td>
                 <td class="text-center"><a href="/assets/pdf/manuals/bns13_manual.pdf" target="_blank" class="btn btn-sm">Manual</a></td>
