--- a/rotary-waterblast-tools/bjv-pipe-cleaning.html
+++ b/rotary-waterblast-tools/bjv-pipe-cleaning.html
@@ -106,13 +106,13 @@ master-slider: yes
 
           <!-- Specs -->
           <section id="section-bar-1">
-            <div class="col-sm-5">
+            <div class="col-sm-6">
               <!-- Nav tabs -->
               <ul class="nav nav-tabs" role="tablist">
-                <li role="presentation" class="active"><a href="#p16" aria-controls="p16" role="tab" data-toggle="tab">BJV-P16</a></li>
-                <li role="presentation"><a href="#p12" aria-controls="p12" role="tab" data-toggle="tab">BJV-P12</a></li>
-                <li role="presentation"><a href="#m24" aria-controls="m24" role="tab" data-toggle="tab">BJV-M24</a></li>
-                <li role="presentation"><a href="#mp12" aria-controls="mp12" role="tab" data-toggle="tab">BJV-MP12</a></li>
+                <li role="presentation" class="active"><a href="#p16" aria-controls="p16" role="tab" data-toggle="tab">BJVE-P16</a></li>
+                <li role="presentation"><a href="#p12" aria-controls="p12" role="tab" data-toggle="tab">BJVE-P12</a></li>
+                <li role="presentation"><a href="#m24" aria-controls="m24" role="tab" data-toggle="tab">BJVE-M24</a></li>
+                <li role="presentation"><a href="#mp12" aria-controls="mp12" role="tab" data-toggle="tab">BJVE-MP12</a></li>
                 <li role="presentation"><a href="#h9" aria-controls="h9" role="tab" data-toggle="tab">BJV-H9</a></li>
               </ul>
               <!-- Tab panes -->
@@ -477,7 +477,7 @@ master-slider: yes
                 </div>
               </div>
             </div>
-            <aside class="col-sm-3 col-sm-offset-4 aside-box">
+            <aside class="col-sm-3 col-sm-offset-3 aside-box">
               <h3>Need Support?</h3>
               <p>Our expert staff is available Monday through Friday 8AM - 5PM MST to answer questions and offer advice on your toughest cleaning applications.</p>
               <h4 class="slab">Phone: +1 970 259-2869<br>US Toll Free: (866) 795-1586</h4>
@@ -489,8 +489,14 @@ master-slider: yes
             <div class="col-sm-4">
               <ul class="list-unstyled basic">
                 <h3>Manuals</h3>
-                <li><a href="/assets/pdf/manuals/BJVE_manual.pdf" target="_blank"><i class="fa fa-file-text-o"></i> &nbsp;BJV Manual (up to 22k psi/1500 bar)</a></li>
+                <li><a href="/assets/pdf/manuals/BJVE_manual.pdf" target="_blank"><i class="fa fa-file-text-o"></i> &nbsp;BJVE Manual (Extended Life, up to 22k psi/1500 bar)</a></li>
+                <li>&nbsp;</li>
+                <li><a href="/assets/pdf/manuals/BJV-P16_Manual.pdf" target="_blank"><i class="fa fa-file-text-o"></i> &nbsp;BJV-P16 Tool Manual</a></li>
+                <li><a href="/assets/pdf/manuals/BJV-P12_Manual.pdf" target="_blank"><i class="fa fa-file-text-o"></i> &nbsp;BJV-P12 Tool Manual</a></li>
+                <li><a href="/assets/pdf/manuals/BJV-M24_Manual.pdf" target="_blank"><i class="fa fa-file-text-o"></i> &nbsp;BJV-M24 Tool Manual</a></li>
+                <li><a href="/assets/pdf/manuals/BJV-MP12_Manual.pdf" target="_blank"><i class="fa fa-file-text-o"></i> &nbsp;BJV-MP12 Tool Manual</a></li>
                 <li><a href="/assets/pdf/manuals/BJV-H9_Manual.pdf" target="_blank"><i class="fa fa-file-text-o"></i> &nbsp;BJV Manual (40k psi/2800 bar)</a></li>
+                <li></li>
               </ul>
             </div>
             <div class="col-sm-4">
