--- a/sewer-tools-nozzles/warthog-wgr-1-1-4-magnum.html
+++ b/sewer-tools-nozzles/warthog-wgr-1-1-4-magnum.html
@@ -375,7 +375,7 @@ master-slider: yes
                       <div class="row">
                         <div class="col-sm-6">
                           <ul>
-                            <li>1 x <strong>WGR 180</strong> Torx L-Wrench</li>
+                            <li>1 x <strong>WGR 180</strong> Magnum Shaft Lock Pin w/Ring</li>
                             <li>1 x <strong>WGR 181</strong> Removal Press Tube</li>
                             <li>1 x <strong>WGR 182</strong> Installation Press Tube</li>
                             <li>1 x <strong>WGR 183</strong> Hex Tool</li>
