--- a/sewer-tools-nozzles/warthog-whr-hybrid-switcher.html
+++ b/sewer-tools-nozzles/warthog-whr-hybrid-switcher.html
@@ -344,7 +344,7 @@ master-slider: yes
                         <div class="col-sm-6">
                           <ul>
                             <li>1 x <strong>BA 481</strong> Tool, Bearing Removal</li>
-                            <li>1 x <strong>WGR 180</strong> Magnum Shaft Lock PIn w/Ring</li>
+                            <li>1 x <strong>WGR 180</strong> Magnum Shaft Lock Pin w/Ring</li>
                             <li>1 x <strong>WGR 186</strong> HP Seal Puller</li>
                             <li>1 x <strong>WHR 181</strong> Tool, Removal Press Tube</li>
                             <li>1 x <strong>WHR 182</strong> Tool, Installation Press Tube</li>
