--- a/sewer-tools-nozzles/warthog-whr-magnum.html
+++ b/sewer-tools-nozzles/warthog-whr-magnum.html
@@ -312,7 +312,7 @@ master-slider: yes
                             <li>1 x <strong>BJ 048-M</strong> Visc Fluid, 6oz</li>
                             <li>1 x <strong>WHR 029</strong> Seal, Head</li>
                             <li>1 x <strong>WHR 014</strong> Bearing Wave Spring</li>
-                            <li>1 x <strong>WGR 180</strong> Torx L-Wrench</li>
+                            <li>1 x <strong>WGR 180</strong> Magnum Shaft Lock Pin w/Ring</li>
                             <li>1 x <strong>GP 049</strong> Grease Syringe</li>
                             <li>1 x <strong>WHR 058</strong> HP Shaft Seal</li>
                             <li>1 x <strong>WHR 009</strong> Rear Bearing</li>
@@ -356,7 +356,7 @@ master-slider: yes
                         <div class="col-sm-6">
                           <ul>
                             <li>1 x <strong>BA 481</strong> Tool, Bearing Removal</li>
-                            <li>1 x <strong>WGR 180</strong> Magnum Shaft Lock PIn w/Ring</li>
+                            <li>1 x <strong>WGR 180</strong> Magnum Shaft Lock Pin w/Ring</li>
                             <li>1 x <strong>WGR 186</strong> HP Seal Puller</li>
                             <li>1 x <strong>WHR 181</strong> Tool, Removal Press Tube</li>
                             <li>1 x <strong>WHR 182</strong> Tool, Installation Press Tube</li>
