--- a/sewer-tools.html
+++ b/sewer-tools.html
@@ -177,7 +177,7 @@ landing: yes
         <td style="text-align: center;"><a href="/whr-magnum"><img src="/assets/img/product/small-whr-01.png" alt="Warthog WHR Magnum Sewer Nozzle"></a></td>
         <td style="font-weight:bold;"><a href="/whr-magnum">WHR</a></td>
         <td><a href="/whr-magnum">6-18”<br>152-457 mm</a></td>
-        <td><a href="/whr-magnum">1” NPT or BSPP</a></td>
+        <td><a href="/whr-magnum">1/2", 3/4” NPT or BSPP</a></td>
         <td><a href="/whr-magnum">14-50 gpm<br>53-189 lpm</a></td>
         <td><a href="/whr-magnum">1200-5K psi<br>83-345 bar</a></td>
       </tr>
@@ -185,7 +185,7 @@ landing: yes
         <td style="text-align: center;"><a href="/wgr-magnum"><img src="/assets/img/product/small-wgr-01.png" alt="Warthog WGR Magnum Sewer Nozzle"></a></td>
         <td style="font-weight:bold;"><a href="/wgr-magnum">WGR</a></td>
         <td><a href="/wgr-magnum">8-36”<br>152-457 mm</a></td>
-        <td><a href="/wgr-magnum">1/2", 3/4” NPT or BSPP</a></td>
+        <td><a href="/wgr-magnum">1” NPT or BSPP</a></td>
         <td><a href="/wgr-magnum">50-80 gpm<br>189-303 lpm</a></td>
         <td><a href="/wgr-magnum">1200-8K psi<br>83-552 bar</a></td>
       </tr>
