misc tool updates - control

--- a/rotary-waterblast-tools/bjv-pipe-cleaning.html
+++ b/rotary-waterblast-tools/bjv-pipe-cleaning.html
@@ -28,29 +28,21 @@ master-slider: yes
       <div class="ms-showcase2-template">
         <div class="master-slider ms-skin-light-2" id="masterslider">
           <div class="ms-slide">
-            <img src="/assets/img/blank.gif" data-src="/assets/img/product/bjv-03.jpg" alt="BJV high pressure pipe cleaning">
-            <img class="ms-thumb" src="/assets/img/product/thumb-bjv-03.jpg" alt="thumb">
+            <img src="/assets/img/blank.gif" data-src="/assets/img/product/bjv-10.jpg" alt="BJV high pressure pipe cleaning">
+            <img class="ms-thumb" src="/assets/img/product/thumb-bjv-10.jpg" alt="thumb">
             <a data-type="video" href="https://www.youtube.com/embed/yibtu38tkXM"> </a>
           </div>
           <div class="ms-slide">
-            <img src="/assets/img/blank.gif" data-src="/assets/img/product/bjv-04.jpg" alt="BJV high pressure pipe cleaning">
-            <img class="ms-thumb" src="/assets/img/product/thumb-bjv-04.jpg" alt="thumb">
+            <img src="/assets/img/blank.gif" data-src="/assets/img/product/bjv-09.jpg" alt="BJV high pressure pipe cleaning">
+            <img class="ms-thumb" src="/assets/img/product/thumb-bjv-09.jpg" alt="thumb">
           </div>
           <div class="ms-slide">
-            <img src="/assets/img/blank.gif" data-src="/assets/img/product/bjv-05.jpg" alt="BJV high pressure pipe cleaning">
-            <img class="ms-thumb" src="/assets/img/product/thumb-bjv-05.jpg" alt="thumb">
+            <img src="/assets/img/blank.gif" data-src="/assets/img/product/bjv-08.jpg" alt="BJV high pressure pipe cleaning">
+            <img class="ms-thumb" src="/assets/img/product/thumb-bjv-08.jpg" alt="thumb">
           </div>
           <div class="ms-slide">
-            <img src="/assets/img/blank.gif" data-src="/assets/img/product/bjv-06.jpg" alt="BJV high pressure pipe cleaning">
-            <img class="ms-thumb" src="/assets/img/product/thumb-bjv-06.jpg" alt="thumb">
-          </div>
-          <div class="ms-slide">
-            <img class="ms-brd" src="/assets/img/blank.gif" data-src="/assets/img/product/bjv-01.jpg" alt="BJV high pressure pipe cleaning">
-            <img class="ms-thumb" src="/assets/img/product/thumb-bjv-01.jpg" alt="thumb">
-          </div>
-          <div class="ms-slide">
-            <img src="/assets/img/blank.gif" data-src="/assets/img/product/bjv-02.jpg" alt="BJV high pressure pipe cleaning">
-            <img class="ms-thumb" src="/assets/img/product/thumb-bjv-02.jpg" alt="thumb">
+            <img src="/assets/img/blank.gif" data-src="/assets/img/product/bjv-07.jpg" alt="BJV high pressure pipe cleaning">
+            <img class="ms-thumb" src="/assets/img/product/thumb-bjv-07.jpg" alt="thumb">
           </div>
         </div>
       </div>
@@ -502,6 +494,7 @@ master-slider: yes
             <div class="col-sm-4">
               <ul class="list-unstyled basic">
                 <h3>Documentation</h3>
+                <li><a href="/assets/pdf/data-sheets/BJV_data_sheet.pdf" target="_blank"><i class="fa fa-file-text-o"></i> &nbsp;BJV Data Sheet</a></li>
                 <li><a href="/assets/pdf/tool-talks/BJV_tool_talk.pdf" target="_blank"><i class="fa fa-file-text-o"></i> &nbsp;BJV Tool Talk</a></li>
                 <li><a href="http://jetting.stoneagetools.com" target="_blank"><i class="fa fa-plane"></i> &nbsp;Tool Jetting</a></li>
               </ul>
