--- a/waterblast-automation/propositioner.html
+++ b/waterblast-automation/propositioner.html
@@ -139,6 +139,7 @@ master-slider: yes
         <div class="col-sm-4">
           <ul class="list-unstyled basic">
             <h3>Documentation</h3>
+            <li><a href="/assets/pdf/data-sheets/ProPositioner_data_sheet.pdf" target="_blank"><i class="fa fa-file-text-o"></i> &nbsp;ProPositioner Data Sheet</a></li>
             <li><a href="/assets/pdf/data-sheets/ABX-PRO_data_sheet.pdf" target="_blank"><i class="fa fa-file-text-o"></i> &nbsp;AutoBox ABX-PRO Data Sheet</a></li>
             <li><a href="/assets/pdf/tool-talks/ABX-PRO_tool_talk.pdf" target="_blank"><i class="fa fa-file-text-o"></i> &nbsp;AutoBox ABX-PRO Tool Talk</a></li>            
           </ul>
