--- a/rotary-waterblast-tools/badger-4in-pipe-cleaning.html
+++ b/rotary-waterblast-tools/badger-4in-pipe-cleaning.html
@@ -285,6 +285,7 @@ master-slider: yes
             <div class="col-sm-4">
               <ul class="list-unstyled basic">
                 <h3>Documentation</h3>
+                <li><a href="/assets/pdf/data-sheets/BA4_data_sheet.pdf" target="_blank"><i class="fa fa-file-text-o"></i> &nbsp;4" Badger Data Sheet</a></li>
                 <li><a href="/assets/pdf/tool-talks/BA4_tool_talk.pdf" target="_blank"><i class="fa fa-file-text-o"></i> &nbsp;4" Badger Tool Talk</a></li>
                 <li><a href="http://jetting.stoneagetools.com" target="_blank"><i class="fa fa-plane"></i> &nbsp;Tool Jetting</a></li>
               </ul>
