Control tool translations

--- a/rotary-waterblast-tools/banshee-tube-cleaners.html
+++ b/rotary-waterblast-tools/banshee-tube-cleaners.html
@@ -749,6 +749,8 @@ master-slider: yes
               <ul class="list-unstyled basic">
                 <h3>Documentation</h3>
                 <li><a href="/assets/pdf/tool-talks/BN_tool_talk.pdf" target="_blank"><i class="fa fa-file-text-o"></i> &nbsp;Banshee Tool Talk</a></li>
+                <li><a href="/assets/pdf/reference/BN_hose_chart.pdf" target="_blank"><i class="fa fa-file-text-o"></i> &nbsp;Banshee Hose Chart</a></li>
+                <li><a href="/assets/pdf/reference/BN_configurator.pdf" target="_blank"><i class="fa fa-file-text-o"></i> &nbsp;Banshee Configurator</a></li>
               </ul>
             </div>
             <aside class="col-sm-3 col-sm-offset-1 aside-box">
