KPs web update bPs web update batch

--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@ landing: yes
     <div class="ms-layer feature-h2" style="width:300px;"   
       data-effect="t(true,n,20,n,n,n,n,n,n,n,n,n,n,n,n)" 
       data-duration="2400" 
-      data-delay="1600" 
+      data-delay="1200" 
       data-ease="easeOutQuint"                
       data-offset-x="150" 
       data-offset-y="20" 
@@ -136,7 +136,7 @@ landing: yes
          data-masked="true">Fittings &amp; Accessories Catalog
     </div>
     
-    <div class="ms-layer" style="width:300px;"   
+    <div class="ms-layer feature-h2" style="width:360px;"  
       data-effect="t(true,n,20,n,n,n,n,n,n,n,n,n,n,n,n)" 
       data-duration="2400" 
       data-delay="1600" 
@@ -144,10 +144,10 @@ landing: yes
       data-offset-x="150" 
       data-offset-y="16" 
       data-origin="ml" 
-      data-position="normal">The NEW StoneAge Fittings &amp; Accessories catalog is available for digital download.
+         data-position="normal"><span style="font-weight:400;">Everything you need for your next waterblasting job</span>
     </div>
 
-    <a href="/product-catalogs" target="_self" class="ms-layer ms-btn ms-btn-circle ms-btn-m" 
+    <a href="/assets/pdf/catalogs/fa_2018/2018_stonage_fittings_and_accessories_web.pdf" target="_blank" class="ms-layer ms-btn ms-btn-circle ms-btn-m" 
        data-effect="t(true,n,n,-600,n,n,n,n,n,n,n,n,n,n,n)" 
        data-duration="2400" 
        data-delay="1200" 
@@ -156,7 +156,7 @@ landing: yes
        data-offset-x="150" 
        data-offset-y="90" 
        data-origin="ml" 
-       data-position="normal">More Info
+       data-position="normal">Download
     </a>
 
     <img  class="ms-layer" src="/assets/img/features/fa_catalog_wb.png"  style="" 
@@ -264,62 +264,6 @@ landing: yes
 
   </div>
   <!-- end of slide -->
-  
-  <!-- new slide -->
-  <div class="ms-slide slide-5">
-    <img src="/assets/img/features/bg_gold.jpg" data-src="/assets/img/features/bg_gold.jpg" alt="lorem ipsum dolor sit"/>  
-
-    <div class="ms-layer feature-h1" style="width:400px;"
-      data-effect="t(true,n,40,n,n,n,n,n,n,n,n,n,n,n,n)" 
-      data-duration="2200" 
-      data-delay="800" 
-      data-ease="easeOutQuint"                
-      data-offset-x="150" 
-      data-offset-y="-23" 
-      data-origin="ml" 
-      data-position="normal"   
-      data-masked="true">Your solution to automated waterblasting
-    </div>
-
-    <a href="https://info.stoneagetools.com/autopack" target="_self" class="ms-layer ms-btn ms-btn-circle ms-btn-m" 
-       data-effect="t(true,n,n,-600,n,n,n,n,n,n,n,n,n,n,n)" 
-       data-duration="2400" 
-       data-delay="1600" 
-       data-ease="easeOutQuint"        
-       data-type="button"        
-       data-offset-x="150" 
-       data-offset-y="104" 
-       data-origin="ml" 
-       data-position="normal">More Info
-    </a>
-
-    <img  class="ms-layer" src="/assets/img/features/autopack_beauty_02.png" alt="" style="" 
-         data-src="/assets/img/features/autopack_beauty_02.png" 
-         data-effect="t(true,n,n,n,n,n,n,n,n,n,n,n,n,n,n)"   
-         data-ease="easeOutQuint"       
-         data-parallax="160" 
-         data-type="image"          
-         data-offset-x="-60" 
-         data-offset-y="-40" 
-         data-origin="tr" 
-         data-position="normal" />
-
-<!--
-    <img class="ms-layer" src="/assets/img/features/wjta-2017-text.png" 
-       data-src="/assets/img/features/wjta-2017-text.png" alt="" style=""  
-       data-effect="t(true,n,n,n,n,n,n,n,n,n,n,n,n,n,n)"   
-       data-ease="easeOutQuint"       
-       data-parallax="90" 
-       data-type="image"          
-       data-offset-x="30" 
-       data-offset-y="0" 
-       data-origin="mr" 
-       data-position="normal"
-     />
--->
-
-  </div>
-  <!-- end of slide -->
  
 </div>
 <!-- end of masterslider -->
@@ -368,13 +312,11 @@ landing: yes
   <div class="container padding-tb-30">
     <div class="col-sm-9 description padding-right-120">
       <h2>Waterblast Equipment for Industrial Cleaning</h2>
-      <p><span class="bold">StoneAge, Inc. is one of the world’s leading manufacturers of high-pressure waterblast tools and automated equipment for industrial companies and contractors worldwide.</span> Our products have been an industry standard for over 30 years and we continue to lead the way with automated equipment designs that promote safety and advance productivity for a wide variety of applications.</p>
+      <p><span class="bold">StoneAge, Inc. manufacturs high-pressure waterblast tools and automated equipment for industrial cleaning applications.</span> Our products have been an industry standard for over 40 years and we continue to lead the way with tools that advance productivity and hands-free automated equipment that ensures you complete your waterblasting jobs safely, easily, on time, and on budget.</p>
     </div>
-    <aside class="col-sm-3 offset-sm-1 padding-tb-30 cta">
-      <p class="point"><span>Need help with a job?</span><br/>
-      <a href="/contact">Contact Our Team of Experts</a></p>
-      <p class="point late"><span>Want to know more about us?</span><br/>
-      <a href="/about">Read About Our Company</a></p>
+    <aside class="col-sm-3 offset-sm-1 padding-tb-30">
+      <a href="/contact" class="btn btn-lg  contact" style="margin-top:3rem;">Need help with a job?</a><br/>
+      <a href="/assets/pdf/catalogs/fa_2018/2018_stonage_fittings_and_accessories_web.pdf" target="_blank"><em>Download our Fittings &amp; Accessories Catalog</em></a>
     </aside>
   </div>
 </section>
