--- a/product-catalogs.html
+++ b/product-catalogs.html
@@ -91,7 +91,7 @@ master-slider: yes
         </tr>
         <tr>
           <td>Page 30-31:</td>
-          <td><a href="assets/pdf/catalogs/waterblast_2017/2017_stoneage_waterblast_catalog_LR30-31.pdf" target="_blank">Tracked Striker</a></td>
+          <td><a href="assets/pdf/catalogs/waterblast_2017/2017_stoneage_waterblast_catalog_LR30-31.pdf" target="_blank">Tracked Striker</a><em> - No Longer Available</em></td>
         </tr>
         <tr>
           <td>Page 32-33:</td>
