--- a/rotary-waterblast-tools/bjv-pipe-cleaning.html
+++ b/rotary-waterblast-tools/bjv-pipe-cleaning.html
@@ -494,7 +494,7 @@ master-slider: yes
             <div class="col-sm-4">
               <ul class="list-unstyled basic">
                 <h3>Documentation</h3>
-                <li><a href="/assets/pdf/data-sheets/BJV_data_sheet.pdf" target="_blank"><i class="fa fa-file-text-o"></i> &nbsp;BJV Data Sheet</a></li>
+                <li><a href="/assets/pdf/data-sheets/BJV_data_sheet.pdf" target="_blank"><i class="fa fa-file-text-o"></i> &nbsp;BJV Brochure</a></li>
                 <li><a href="/assets/pdf/tool-talks/BJV_tool_talk.pdf" target="_blank"><i class="fa fa-file-text-o"></i> &nbsp;BJV Tool Talk</a></li>
                 <li><a href="http://jetting.stoneagetools.com" target="_blank"><i class="fa fa-plane"></i> &nbsp;Tool Jetting</a></li>
               </ul>
