--- a/safety-information.html
+++ b/safety-information.html
@@ -32,7 +32,7 @@ permalink: /safety
         <div class="col-sm-6 product-list">
           <div class="list-group">
             <a href="#" class="list-group-item header">Material Safety</a>
-            <a href="/sds" class="list-group-item">Safety Data Sheets (SDS)</a>
+            <a href="/sds" class="list-group-item">Safety Brochures (SDS)</a>
         </div>
       </div>
     </div>
