--- a/sewer-tools-nozzles/warthog-wh.html
+++ b/sewer-tools-nozzles/warthog-wh.html
@@ -188,7 +188,7 @@ master-slider: yes
             <div class="col-sm-4">
               <ul class="list-unstyled basic">
                 <h3>Documentation</h3>
-                <li><a href="/assets/pdf/catalogs/sewer_2019/2019_warthog_catalog_wh.pdf" target="_blank"><i class="fa fa-file-text-o"></i> &nbsp;Data Sheet</a></li>
+                <li><a href="/assets/pdf/catalogs/sewer_2019/2019_warthog_catalog_wh.pdf" target="_blank"><i class="fa fa-file-text-o"></i> &nbsp;Brochure</a></li>
                 <li><a href="http://jetting.stoneagetools.com/#/t/sw" target="_blank"><i class="fa fa-plane"></i> &nbsp;Tool Jetting</a></li>
               </ul>
             </div>
