--- a/sewer-tools-nozzles/warthog-whr-magnum.html
+++ b/sewer-tools-nozzles/warthog-whr-magnum.html
@@ -189,7 +189,7 @@ master-slider: yes
             <div class="col-sm-4">
               <ul class="list-unstyled basic">
                 <h3>Documentation</h3>
-                <li><a href="/assets/pdf/catalogs/sewer_2019/2019_warthog_catalog_whr.pdf" target="_blank"><i class="fa fa-file-text-o"></i> &nbsp;Warthog WHR Magnum Data Sheet</a></li>
+                <li><a href="/assets/pdf/catalogs/sewer_2019/2019_warthog_catalog_whr.pdf" target="_blank"><i class="fa fa-file-text-o"></i> &nbsp;Warthog WHR Magnum Brochure</a></li>
                 <li><a href="http://jetting.stoneagetools.com/#/t/sw" target="_blank"><i class="fa fa-plane"></i> &nbsp;Tool Jetting</a></li>
               </ul>
             </div>
@@ -441,7 +441,7 @@ master-slider: yes
     <div class="col-md-4 col-md-offset-1">
       <table>
         <tr>
-          <td><a href="/assets/pdf/data-sheets/WHR_data_sheet.pdf" target="_blank"><i class="fa fa-file-text-o"></i><br>Download Data Sheet</a></td>
+          <td><a href="/assets/pdf/data-sheets/WHR_data_sheet.pdf" target="_blank"><i class="fa fa-file-text-o"></i><br>Download Brochure</a></td>
           <td><a href="/safety"><i class="fa fa-warning"></i><br>Tool Safety</a></td>
         </tr>
       </table>
