--- a/sewer-tools-nozzles/warthog-wv.html
+++ b/sewer-tools-nozzles/warthog-wv.html
@@ -212,7 +212,7 @@ master-slider: yes
             <div class="col-sm-4">
               <ul class="list-unstyled basic">
                 <h3>Documentation</h3>
-                <li><a href="/assets/pdf/catalogs/sewer_2019/2019_warthog_catalog_wv.pdf" target="_blank"><i class="fa fa-plane"></i> &nbsp;Data Sheet</a></li>
+                <li><a href="/assets/pdf/catalogs/sewer_2019/2019_warthog_catalog_wv.pdf" target="_blank"><i class="fa fa-plane"></i> &nbsp;Brochure</a></li>
 <!--                <li><a href="http://jetting.stoneagetools.com" target="_blank"><i class="fa fa-plane"></i> &nbsp;Tool Jetting</a></li>-->
               </ul>
             </div>
