--- a/waterblast-automation/bfw-100-boiler-cleaner.html
+++ b/waterblast-automation/bfw-100-boiler-cleaner.html
@@ -164,7 +164,7 @@ master-slider: yes
         <div class="col-sm-4">
           <ul class="list-unstyled basic">
             <h3>Documentation</h3>
-            <li><a href="/assets/pdf/ast_data_sheet.pdf" target="_blank"><i class="fa fa-file-text-o"></i> &nbsp;AutoStroke Data Sheet</a></li>
+            <li><a href="/assets/pdf/ast_data_sheet.pdf" target="_blank"><i class="fa fa-file-text-o"></i> &nbsp;AutoStroke Brochure</a></li>
             <li><a href="/assets/pdf/tool-talks/AST-tool-talk.pdf" target="_blank"><i class="fa fa-file-text-o"></i> &nbsp;AutoStroke Tool Talk</a></li>
           </ul>
         </div>
