--- a/waterblast-automation/blackhawk-concrete-demo.html
+++ b/waterblast-automation/blackhawk-concrete-demo.html
@@ -185,7 +185,7 @@ master-slider: yes
         <div class="col-sm-4">
           <ul class="list-unstyled basic">
             <h3>Documentation</h3>
-            <li><a href="/assets/pdf/data-sheets/BHK_data_sheet.pdf" target="_blank"><i class="fa fa-file-text-o"></i> &nbsp;Blackhawk BHK-100 Data Sheet</a></li>
+            <li><a href="/assets/pdf/data-sheets/BHK_data_sheet.pdf" target="_blank"><i class="fa fa-file-text-o"></i> &nbsp;Blackhawk BHK-100 Brochure</a></li>
             <li><a href="/assets/pdf/reference/concrete_demo_rates_comparison.pdf" target="_blank"><i class="fa fa-file-text-o"></i> &nbsp;Concrete Hydrodemolition Removal Rates Comparison</a></li>
           </ul>
         </div>
@@ -259,7 +259,7 @@ master-slider: yes
     <div class="col-md-4 col-md-offset-1">
       <table>
         <tr>
-          <td><a href="/assets/pdf/data-sheets/BHK_data_sheet.pdf" target="_blank"><i class="fa fa-file-text-o"></i><br>Download Data Sheet</a></td>
+          <td><a href="/assets/pdf/data-sheets/BHK_data_sheet.pdf" target="_blank"><i class="fa fa-file-text-o"></i><br>Download Brochure</a></td>
           <td><a href="/safety"><i class="fa fa-warning"></i><br>Tool Safety</a></td>
         </tr>
       </table>
