--- a/waterblast-automation/inside-diameter-pipe-cleaner.html
+++ b/waterblast-automation/inside-diameter-pipe-cleaner.html
@@ -135,7 +135,7 @@ master-slider: yes
         <div class="col-sm-8">
           <ul class="list-unstyled basic">
             <h3>Documentation</h3>
-            <li><a href="/assets/pdf/catalogs/waterblast_2017/2017_stoneage_waterblast_catalog_LR44-45.pdf" target="_blank"><i class="fa fa-file-text-o"></i> &nbsp;ID Pipe Cleaner Data Sheet</a></li>
+            <li><a href="/assets/pdf/catalogs/waterblast_2017/2017_stoneage_waterblast_catalog_LR44-45.pdf" target="_blank"><i class="fa fa-file-text-o"></i> &nbsp;ID Pipe Cleaner Brochure</a></li>
           </ul>
         </div>
         <aside class="col-sm-3 col-sm-offset-1 aside-box">
