--- a/waterblast-automation/prodrain.html
+++ b/waterblast-automation/prodrain.html
@@ -145,7 +145,7 @@ master-slider: yes
         <div class="col-sm-4">
           <ul class="list-unstyled basic">
             <h3>Documentation</h3>
-            <li><a href="/assets/pdf/data-sheets/ProDrain_data_sheet.pdf" target="_blank"><i class="fa fa-file-text-o"></i> &nbsp;ProDrain Data Sheet</a></li>
+            <li><a href="/assets/pdf/data-sheets/ProDrain_data_sheet.pdf" target="_blank"><i class="fa fa-file-text-o"></i> &nbsp;ProDrain Brochure</a></li>
           </ul>
         </div>
         <aside class="col-sm-3 col-sm-offset-1 aside-box">
