--- a/waterblast-automation/scs-tank-cleaner.html
+++ b/waterblast-automation/scs-tank-cleaner.html
@@ -257,7 +257,7 @@ master-slider: yes
             <div class="col-sm-4">
               <ul class="list-unstyled basic">
                 <h3>Documentation</h3>
-                <li><a href="/assets/pdf/hcs-2l_data_sheet.pdf" target="_blank"><i class="fa fa-file-text-o"></i> &nbsp;HCS-2L Data Sheet</a></li>
+                <li><a href="/assets/pdf/hcs-2l_data_sheet.pdf" target="_blank"><i class="fa fa-file-text-o"></i> &nbsp;HCS-2L Brochure</a></li>
                 <li><a href="/assets/pdf/tool-talks/HCS_tool_talk.pdf" target="_blank"><i class="fa fa-file-text-o"></i> &nbsp;HCS-2L Tool Talk</a></li>
               </ul>
             </div>
