--- a/waterblast-automation/striker-tracked.html
+++ b/waterblast-automation/striker-tracked.html
@@ -3,7 +3,7 @@ layout: default
 page-type: product
 title: StoneAge Tracked Striker Remote Shotgunning
 excerpt: The Tracked Striker is an automated hydroblasting system designed to replace manual shotgunning applications with an emphasis on safety, usability, and easy assembly.
-permalink: /tracked-striker
+permalink: /tracked-striker-discontinued
 master-slider: yes
 ---
 
@@ -170,7 +170,7 @@ master-slider: yes
         <div class="col-sm-4">
           <ul class="list-unstyled basic">
             <h3>Documentation</h3>
-            <li><a href="/assets/pdf/data-sheets/striker_trk_data_sheet.pdf" target="_blank"><i class="fa fa-file-text-o"></i> &nbsp;Tracked Striker Data Sheet</a></li>
+            <li><a href="/assets/pdf/data-sheets/striker_trk_data_sheet.pdf" target="_blank"><i class="fa fa-file-text-o"></i> &nbsp;Tracked Striker Brochure</a></li>
             <li><a href="/assets/pdf/tool-talks/striker_trk_tool_talk.pdf" target="_blank"><i class="fa fa-file-text-o"></i> &nbsp;Tracked Striker Tool Talk</a></li>
           </ul>
         </div>
@@ -321,7 +321,7 @@ master-slider: yes
     <div class="col-md-4 col-md-offset-1">
       <table>
         <tr>
-          <td><a href="/assets/pdf/data-sheets/striker_trk_data_sheet.pdf" target="_blank"><i class="fa fa-file-text-o"></i><br>Download Data Sheet</a></td>
+          <td><a href="/assets/pdf/data-sheets/striker_trk_data_sheet.pdf" target="_blank"><i class="fa fa-file-text-o"></i><br>Download Brochure</a></td>
           <td><a href="/assets/pdf/tool-talks/striker_trk_tool_talk.pdf" target="_blank"><i class="fa fa-file-text-o"></i><br>Download Tool Talk</a></td>
         </tr>
       </table>
