--- a/waterblast-automation/torus-positioning-booms.html
+++ b/waterblast-automation/torus-positioning-booms.html
@@ -155,7 +155,7 @@ master-slider: yes
 <!--
           <ul class="list-unstyled basic">
             <h3>Documentation</h3>
-            <li><a href="/assets/pdf/data-sheets/BB-100_data_sheet.pdf" target="_blank"><i class="fa fa-file-text-o"></i> &nbsp;Bundle Blaster Data Sheet</a></li>
+            <li><a href="/assets/pdf/data-sheets/BB-100_data_sheet.pdf" target="_blank"><i class="fa fa-file-text-o"></i> &nbsp;Bundle Blaster Brochure</a></li>
           </ul>
 -->
         </div>
