--- a/assets/vid/vids.html
+++ b/assets/vid/vids.html
@@ -235,7 +235,7 @@
   <iframe width="854" height="480" src="https://www.youtube.com/embed/K77gEtQl_Xc?rel=0&autoplay=1" frameborder="0" allowfullscreen></iframe>
 </div>
 <div id="switcher-vid">
-  <iframe width="560" height="315" src="https://www.youtube.com/embed/x8Rl3rQrhWI?rel=0&autoplay=1" frameborder="0" allowfullscreen></iframe>
+  <iframe width="560" height="315" src="https://www.youtube.com/embed/ghLh7AJawsc?rel=0&autoplay=1" frameborder="0" allowfullscreen></iframe>
 </div>
 <div id="wgr-switcher-vid">
   <iframe width="560" height="315" src="https://www.youtube.com/embed/iybnXP6faVU?rel=0&autoplay=1" frameborder="0" allowfullscreen></iframe>
