--- a/downhole-tools/spincat-sc-125.html
+++ b/downhole-tools/spincat-sc-125.html
@@ -206,8 +206,8 @@ master-slider: yes
             <div class="col-sm-4">
               <ul class="list-unstyled basic">
                 <h3>Documentation</h3>
-                <li><a href="/assets/pdf/data-sheets/SC-125_data_sheet.pdf" target="_blank"><i class="fa fa-file-text-o"></i> &nbsp;SC-125 Data Sheet</a></li>
-                <li><a href="/assets/pdf/data-sheets/SpinCat_family_data_sheet.pdf" target="_blank"><i class="fa fa-file-text-o"></i> &nbsp;StoneAge SpinCat&trade; Family Data Sheet</a></li>
+                <li><a href="/assets/pdf/data-sheets/SC-125_data_sheet.pdf" target="_blank"><i class="fa fa-file-text-o"></i> &nbsp;SC-125 Brochure</a></li>
+                <li><a href="/assets/pdf/data-sheets/SpinCat_family_data_sheet.pdf" target="_blank"><i class="fa fa-file-text-o"></i> &nbsp;StoneAge SpinCat&trade; Family Brochure</a></li>
                 <li><a href="http://jetting.stoneagetools.com/#/t/sc" target="_blank"><i class="fa fa-plane"></i> &nbsp;Tool Jetting</a></li>
               </ul>
             </div>
@@ -404,7 +404,7 @@ master-slider: yes
     <div class="col-md-4 col-md-offset-1">
       <table>
         <tr>
-          <td><a href="/assets/pdf/data-sheets/SC-125_data_sheet.pdf" target="_blank"><i class="fa fa-file-text-o"></i><br>Data Sheet</a></td>
+          <td><a href="/assets/pdf/data-sheets/SC-125_data_sheet.pdf" target="_blank"><i class="fa fa-file-text-o"></i><br>Brochure</a></td>
           <td><a href="/safety"><i class="fa fa-warning"></i><br>Tool Safety</a></td>
         </tr>
       </table>
