--- a/rotary-waterblast-tools/badger-4in-pipe-cleaning.html
+++ b/rotary-waterblast-tools/badger-4in-pipe-cleaning.html
@@ -168,7 +168,7 @@ master-slider: yes
                     </tr>
                     <tr>
                       <th>Tool Model</th>
-                      <td colspan="2">BA-BSPP6, BAE-MP9R, BAE-M24</td>
+                      <td colspan="2">BAE-BSPP6, BAE-MP9R, BAE-M24</td>
                     </tr>
                     <tr>
                       <th>Pressure Range</th>
@@ -285,7 +285,7 @@ master-slider: yes
             <div class="col-sm-4">
               <ul class="list-unstyled basic">
                 <h3>Documentation</h3>
-                <li><a href="/assets/pdf/data-sheets/BA4_data_sheet.pdf" target="_blank"><i class="fa fa-file-text-o"></i> &nbsp;4" Badger Data Sheet</a></li>
+                <li><a href="/assets/pdf/data-sheets/BA4_data_sheet.pdf" target="_blank"><i class="fa fa-file-text-o"></i> &nbsp;4" Badger Brochure</a></li>
                 <li><a href="/assets/pdf/tool-talks/BA4_tool_talk.pdf" target="_blank"><i class="fa fa-file-text-o"></i> &nbsp;4" Badger Tool Talk</a></li>
                 <li><a href="http://jetting.stoneagetools.com" target="_blank"><i class="fa fa-plane"></i> &nbsp;Tool Jetting</a></li>
               </ul>
@@ -363,7 +363,7 @@ master-slider: yes
                   <div class="panel-heading" role="tab" id="heading2">
                     <h4 class="panel-title">
                       <a role="button" data-toggle="collapse" data-parent="#accordion" href="#collapse2" aria-expanded="false" aria-controls="collapse2">
-                        <strong>BA 600-F</strong> Service Kit for BA-P6/BA-BSPP6 - Fast Rotation<i class="indicator fa fa-caret-down pull-right" aria-hidden="true"></i>
+                        <strong>BA 600-F</strong> Service Kit for BAE-P6/BAE-BSPP6 - Fast Rotation<i class="indicator fa fa-caret-down pull-right" aria-hidden="true"></i>
                       </a>
                     </h4>
                   </div>
@@ -393,7 +393,7 @@ master-slider: yes
                   <div class="panel-heading" role="tab" id="heading3">
                     <h4 class="panel-title">
                       <a role="button" data-toggle="collapse" data-parent="#accordion" href="#collapse3" aria-expanded="false" aria-controls="collapse3">
-                        <strong>BA 600-TM12-S</strong> Service Kit for BA-TM12 - Slow Rotation<i class="indicator fa fa-caret-down pull-right" aria-hidden="true"></i>
+                        <strong>BA 600-TM12-S</strong> Service Kit for BAE-TM12 - Slow Rotation<i class="indicator fa fa-caret-down pull-right" aria-hidden="true"></i>
                       </a>
                     </h4>
                   </div>
@@ -423,7 +423,7 @@ master-slider: yes
                   <div class="panel-heading" role="tab" id="heading4">
                     <h4 class="panel-title">
                       <a role="button" data-toggle="collapse" data-parent="#accordion" href="#collapse4" aria-expanded="false" aria-controls="collapse4">
-                        <strong>BA 600-TM12-F</strong> Service Kit for BA-TM12 - Fast Rotation<i class="indicator fa fa-caret-down pull-right" aria-hidden="true"></i>
+                        <strong>BA 600-TM12-F</strong> Service Kit for BAE-TM12 - Fast Rotation<i class="indicator fa fa-caret-down pull-right" aria-hidden="true"></i>
                       </a>
                     </h4>
                   </div>
@@ -484,7 +484,7 @@ master-slider: yes
                   <div class="panel-heading" role="tab" id="heading6">
                     <h4 class="panel-title">
                       <a role="button" data-toggle="collapse" data-parent="#accordion" href="#collapse6" aria-expanded="false" aria-controls="collapse6">
-                        <strong>BA 602</strong> Seal Kit for BA-P6/BA-BSPP6<i class="indicator fa fa-caret-down pull-right" aria-hidden="true"></i>
+                        <strong>BA 602</strong> Seal Kit for BAE-P6/BAE-BSPP6<i class="indicator fa fa-caret-down pull-right" aria-hidden="true"></i>
                       </a>
                     </h4>
                   </div>
@@ -501,7 +501,7 @@ master-slider: yes
                   <div class="panel-heading" role="tab" id="heading7">
                     <h4 class="panel-title">
                       <a role="button" data-toggle="collapse" data-parent="#accordion" href="#collapse7" aria-expanded="false" aria-controls="collapse7">
-                        <strong>BA 602-TM12</strong> Seal Kit for BA-TM12<i class="indicator fa fa-caret-down pull-right" aria-hidden="true"></i>
+                        <strong>BA 602-TM12</strong> Seal Kit for BAE-TM12<i class="indicator fa fa-caret-down pull-right" aria-hidden="true"></i>
                       </a>
                     </h4>
                   </div>
@@ -518,7 +518,7 @@ master-slider: yes
                   <div class="panel-heading" role="tab" id="heading8">
                     <h4 class="panel-title">
                       <a role="button" data-toggle="collapse" data-parent="#accordion" href="#collapse8" aria-expanded="false" aria-controls="collapse8">
-                        <strong>BA 604</strong> Disk Kit for BA-P6/BA-BSPP6/BA-TM12<i class="indicator fa fa-caret-down pull-right" aria-hidden="true"></i>
+                        <strong>BA 604</strong> Disk Kit for BAE-P6/BAE-BSPP6/BAE-TM12<i class="indicator fa fa-caret-down pull-right" aria-hidden="true"></i>
                       </a>
                     </h4>
                   </div>
@@ -542,7 +542,7 @@ master-slider: yes
                   <div class="panel-heading" role="tab" id="heading9">
                     <h4 class="panel-title">
                       <a role="button" data-toggle="collapse" data-parent="#accordion" href="#collapse9" aria-expanded="false" aria-controls="collapse9">
-                        <strong>BA 610-S</strong> Overhaul Kit for BA-P6/BA-BSPP6 - Slow Rotation<i class="indicator fa fa-caret-down pull-right" aria-hidden="true"></i>
+                        <strong>BA 610-S</strong> Overhaul Kit for BAE-P6/BAE-BSPP6 - Slow Rotation<i class="indicator fa fa-caret-down pull-right" aria-hidden="true"></i>
                       </a>
                     </h4>
                   </div>
@@ -576,7 +576,7 @@ master-slider: yes
                   <div class="panel-heading" role="tab" id="heading10">
                     <h4 class="panel-title">
                       <a role="button" data-toggle="collapse" data-parent="#accordion" href="#collapse10" aria-expanded="false" aria-controls="collapse10">
-                        <strong>BA 610-F</strong> Overhaul Kit for BA-P6/BA-BSPP6 - Fast Rotation<i class="indicator fa fa-caret-down pull-right" aria-hidden="true"></i>
+                        <strong>BA 610-F</strong> Overhaul Kit for BAE-P6/BAE-BSPP6 - Fast Rotation<i class="indicator fa fa-caret-down pull-right" aria-hidden="true"></i>
                       </a>
                     </h4>
                   </div>
@@ -610,7 +610,7 @@ master-slider: yes
                   <div class="panel-heading" role="tab" id="heading11">
                     <h4 class="panel-title">
                       <a role="button" data-toggle="collapse" data-parent="#accordion" href="#collapse11" aria-expanded="false" aria-controls="collapse11">
-                        <strong>BA 610-TM12-S</strong> Overhaul Kit for BA-TM12 - Slow Rotation<i class="indicator fa fa-caret-down pull-right" aria-hidden="true"></i>
+                        <strong>BA 610-TM12-S</strong> Overhaul Kit for BAE-TM12 - Slow Rotation<i class="indicator fa fa-caret-down pull-right" aria-hidden="true"></i>
                       </a>
                     </h4>
                   </div>
@@ -644,7 +644,7 @@ master-slider: yes
                   <div class="panel-heading" role="tab" id="heading12">
                     <h4 class="panel-title">
                       <a role="button" data-toggle="collapse" data-parent="#accordion" href="#collapse12" aria-expanded="false" aria-controls="collapse12">
-                        <strong>BA 610-TM12-F</strong> Overhaul Kit for BA-TM12 - Fast Rotation<i class="indicator fa fa-caret-down pull-right" aria-hidden="true"></i>
+                        <strong>BA 610-TM12-F</strong> Overhaul Kit for BAE-TM12 - Fast Rotation<i class="indicator fa fa-caret-down pull-right" aria-hidden="true"></i>
                       </a>
                     </h4>
                   </div>
@@ -719,7 +719,7 @@ master-slider: yes
                   <div class="panel-heading" role="tab" id="heading14">
                     <h4 class="panel-title">
                       <a role="button" data-toggle="collapse" data-parent="#accordion" href="#collapse14" aria-expanded="false" aria-controls="collapse14">
-                        <strong>BA 612</strong> Tool Kit for BA-P6/BA-BSPP6/BA-TM12<i class="indicator fa fa-caret-down pull-right" aria-hidden="true"></i>
+                        <strong>BA 612</strong> Tool Kit for BAE-P6/BAE-BSPP6/BAE-TM12<i class="indicator fa fa-caret-down pull-right" aria-hidden="true"></i>
                       </a>
                     </h4>
                   </div>
