--- a/safety-data-sheets.html
+++ b/safety-data-sheets.html
@@ -1,19 +1,19 @@
 ---
 layout: default
 page-type: page
-title: StoneAge Material Safety Data Sheets (SDS) 
+title: StoneAge Material Safety Brochures (SDS) 
 permalink: /sds
 ---
 
 <div class="fluid-container landing-nav">
   <div class="container">
-    <h1 class="page-heading">Safety Data Sheets (SDS) for StoneAge Products</h1>
+    <h1 class="page-heading">Safety Brochures (SDS) for StoneAge Products</h1>
   </div>
 </div>
 
 <section class="container padding-tb-30">
   <div class="col-sm-7">
-    <p class="grey description">The OSHA Hazard Communication Standard (HCS) requires chemical manufacturers, distributors, or importers to provide Safety Data Sheets (SDSs) (formerly known as Material Safety Data Sheets or MSDSs) to communicate the hazards of hazardous chemical products.</p>      
+    <p class="grey description">The OSHA Hazard Communication Standard (HCS) requires chemical manufacturers, distributors, or importers to provide Safety Brochures (SDSs) (formerly known as Material Safety Brochures or MSDSs) to communicate the hazards of hazardous chemical products.</p>      
   <p><em>Employers must ensure that SDSs are readily accessible to employees.<br>For more information: <a href="http://www.osha.gov">www.osha.gov</a></em></p>
   </div>
 </section>
