--- a/sewer-tools-nozzles/hydro-x-fixed.html
+++ b/sewer-tools-nozzles/hydro-x-fixed.html
@@ -233,7 +233,7 @@ master-slider: yes
             <div class="col-sm-4">
               <ul class="list-unstyled basic">
                 <h3>Documentation</h3>
-                <li><a href="/assets/pdf/catalogs/sewer_2019/2019_warthog_catalog_hydro-x.pdf" target="_blank"><i class="fa fa-file-text-o"></i> &nbsp;Hydro-X Data Sheet</a></li>
+                <li><a href="/assets/pdf/catalogs/sewer_2019/2019_warthog_catalog_hydro-x.pdf" target="_blank"><i class="fa fa-file-text-o"></i> &nbsp;Hydro-X Brochure</a></li>
                 <li><a href="/assets/pdf/reference/hydro-x_jetting_chart.pdf" target="_blank"><i class="fa fa-plane"></i> &nbsp;Hydro-X Jetting Chart</a></li>
               </ul>
             </div>
@@ -313,7 +313,7 @@ master-slider: yes
     <div class="col-md-4 col-md-offset-1">
       <table>
         <tr>
-          <td><a href="/assets/pdf/data-sheets/HX_data_sheet.pdf" target="_blank"><i class="fa fa-file-text-o"></i><br>Download Data Sheet</a></td>
+          <td><a href="/assets/pdf/data-sheets/HX_data_sheet.pdf" target="_blank"><i class="fa fa-file-text-o"></i><br>Download Brochure</a></td>
           <td><a href="/safety"><i class="fa fa-warning"></i><br>Tool Safety</a></td>
         </tr>
       </table>
