--- a/sewer-tools-nozzles/hydro-x-rotary.html
+++ b/sewer-tools-nozzles/hydro-x-rotary.html
@@ -160,7 +160,7 @@ master-slider: yes
             <div class="col-sm-4">
               <ul class="list-unstyled basic">
                 <h3>Documentation</h3>
-                <li><a href="/assets/pdf/data-sheets/HXR_data_sheet.pdf" target="_blank"><i class="fa fa-file-text-o"></i> &nbsp;HXR-300 Data Sheet</a></li>
+                <li><a href="/assets/pdf/data-sheets/HXR_data_sheet.pdf" target="_blank"><i class="fa fa-file-text-o"></i> &nbsp;HXR-300 Brochure</a></li>
                 <li><a href="/assets/pdf/reference/hydro-x_jetting_chart.pdf" target="_blank"><i class="fa fa-plane"></i> &nbsp;Hydro-X Jetting Chart</a></li>
               </ul>
             </div>
@@ -298,7 +298,7 @@ master-slider: yes
     <div class="col-md-4 col-md-offset-1">
       <table>
         <tr>
-          <td><a href="/assets/pdf/data-sheets/HXR_data_sheet.pdf" target="_blank"><i class="fa fa-file-text-o"></i><br>Download Data Sheet</a></td>
+          <td><a href="/assets/pdf/data-sheets/HXR_data_sheet.pdf" target="_blank"><i class="fa fa-file-text-o"></i><br>Download Brochure</a></td>
           <td><a href="/safety"><i class="fa fa-warning"></i><br>Tool Safety</a></td>
         </tr>
       </table>
