--- a/sewer-tools-nozzles/warthog-whr-hybrid-switcher.html
+++ b/sewer-tools-nozzles/warthog-whr-hybrid-switcher.html
@@ -30,7 +30,7 @@ master-slider: yes
           <div class="ms-slide">
             <img class="ms-brd" src="/assets/img/blank.gif" data-src="/assets/img/product/whr-hybrid-switcher-01.jpg" alt="Warthog WHR Hybrid Switcher sewer jetting">
             <img class="ms-thumb" src="/assets/img/product/thumb-whr-hybrid-switcher-01.jpg" alt="thumb">
-              <a data-type="video" href="https://www.youtube.com/embed/x8Rl3rQrhWI?rel=0"> </a>
+              <a data-type="video" href="https://www.youtube.com/embed/ghLh7AJawsc?rel=0"> </a>
           </div>
           <div class="ms-slide">
             <img src="/assets/img/blank.gif" data-src="/assets/img/product/whr-hybrid-switcher-05.jpg" alt="Warthog WHR HybridSwitcher sewer jetting">
@@ -187,7 +187,7 @@ master-slider: yes
             <div class="col-sm-4">
               <ul class="list-unstyled basic">
                 <h3>Documentation</h3>
-                <li><a href="/assets/pdf/catalogs/sewer_2019/2019_warthog_catalog_whr_hybrid_switcher.pdf" target="_blank"><i class="fa fa-file-text-o"></i> &nbsp;Warthog WHR Hybrid Switcher Data Sheet</a></li>
+                <li><a href="/assets/pdf/catalogs/sewer_2019/2019_warthog_catalog_whr_hybrid_switcher.pdf" target="_blank"><i class="fa fa-file-text-o"></i> &nbsp;Warthog WHR Hybrid Switcher Brochure</a></li>
                 <li><a href="http://jetting.stoneagetools.com" target="_blank"><i class="fa fa-plane"></i> &nbsp;Tool Jetting</a></li>
               </ul>
             </div>
@@ -429,7 +429,7 @@ master-slider: yes
     <div class="col-md-4 col-md-offset-1">
       <table>
         <tr>
-<!--          <td><a href="/assets/pdf/data-sheets/WHR-HYB-SWT_data_sheet.pdf" target="_blank"><i class="fa fa-file-text-o"></i><br>Download Data Sheet</a></td>-->
+<!--          <td><a href="/assets/pdf/data-sheets/WHR-HYB-SWT_data_sheet.pdf" target="_blank"><i class="fa fa-file-text-o"></i><br>Download Brochure</a></td>-->
           <td><a href="/safety"><i class="fa fa-warning"></i><br>Tool Safety</a></td>
         </tr>
       </table>
