--- a/sewer-tools-nozzles/warthog-whr-switcher.html
+++ b/sewer-tools-nozzles/warthog-whr-switcher.html
@@ -30,7 +30,7 @@ master-slider: yes
           <div class="ms-slide">
             <img class="ms-brd" src="/assets/img/blank.gif" data-src="/assets/img/product/whr-switcher-01.jpg" alt="Warthog WHR Switcher sewer jetting">
             <img class="ms-thumb" src="/assets/img/product/thumb-whr-switcher-01.jpg" alt="thumb">
-              <a data-type="video" href="https://www.youtube.com/embed/x8Rl3rQrhWI?rel=0"> </a>
+              <a data-type="video" href="https://www.youtube.com/embed/ghLh7AJawsc?rel=0"> </a>
           </div>
           <div class="ms-slide">
             <img src="/assets/img/blank.gif" data-src="/assets/img/product/whr-switcher-02.jpg" alt="Warthog WHR Switcher sewer jetting">
@@ -188,7 +188,7 @@ master-slider: yes
             <div class="col-sm-4">
               <ul class="list-unstyled basic">
                 <h3>Documentation</h3>
-                <li><a href="/assets/pdf/catalogs/sewer_2019/2019_warthog_catalog_whr_switcher.pdf" target="_blank"><i class="fa fa-file-text-o"></i> &nbsp;Warthog WHR Switcher Data Sheet</a></li>
+                <li><a href="/assets/pdf/catalogs/sewer_2019/2019_warthog_catalog_whr_switcher.pdf" target="_blank"><i class="fa fa-file-text-o"></i> &nbsp;Warthog WHR Switcher Brochure</a></li>
                 <li><a href="http://jetting.stoneagetools.com" target="_blank"><i class="fa fa-plane"></i> &nbsp;Tool Jetting</a></li>
               </ul>
             </div>
@@ -430,7 +430,7 @@ master-slider: yes
     <div class="col-md-4 col-md-offset-1">
       <table>
         <tr>
-          <td><a href="/assets/pdf/data-sheets/WHR-SWT_data_sheet.pdf" target="_blank"><i class="fa fa-file-text-o"></i><br>Download Data Sheet</a></td>
+          <td><a href="/assets/pdf/data-sheets/WHR-SWT_data_sheet.pdf" target="_blank"><i class="fa fa-file-text-o"></i><br>Download Brochure</a></td>
           <td><a href="/safety"><i class="fa fa-warning"></i><br>Tool Safety</a></td>
         </tr>
       </table>
