--- a/waterblast-automation/autobox-abx-pro.html
+++ b/waterblast-automation/autobox-abx-pro.html
@@ -159,9 +159,9 @@ master-slider: yes
         <div class="col-sm-4">
           <ul class="list-unstyled basic">
             <h3>Documentation</h3>
-            <li><a href="/assets/pdf/data-sheets/ABX-PRO_data_sheet.pdf" target="_blank"><i class="fa fa-file-text-o"></i> &nbsp;ABX-PRO Data Sheet</a></li>
+            <li><a href="/assets/pdf/data-sheets/ABX-PRO_data_sheet.pdf" target="_blank"><i class="fa fa-file-text-o"></i> &nbsp;ABX-PRO Brochure</a></li>
             <li><a href="/assets/pdf/tool-talks/ABX-PRO_tool_talk.pdf" target="_blank"><i class="fa fa-file-text-o"></i> &nbsp;ABX-PRO Tool Talk</a></li>
-            <li><a href="/assets/pdf/data-sheets/AutoPack_data_sheet.pdf" target="_blank"><i class="fa fa-file-text-o"></i> &nbsp;AutoPack Data Sheet</a></li>
+            <li><a href="/assets/pdf/data-sheets/AutoPack_data_sheet.pdf" target="_blank"><i class="fa fa-file-text-o"></i> &nbsp;AutoPack Brochure</a></li>
           </ul>
         </div>
         <aside class="col-sm-3 col-sm-offset-1 aside-box">
@@ -375,7 +375,7 @@ master-slider: yes
     <div class="col-md-4 col-md-offset-1">
       <table>
         <tr>
-          <td><a href="/assets/pdf/data-sheets/ABX-PRO_data_sheet.pdf" target="_blank"><i class="fa fa-file-text-o"></i><br>Download Data Sheet</a></td>
+          <td><a href="/assets/pdf/data-sheets/ABX-PRO_data_sheet.pdf" target="_blank"><i class="fa fa-file-text-o"></i><br>Download Brochure</a></td>
           <td><a href="/assets/pdf/tool-talks/ABX-PRO_tool_talk.pdf" target="_blank"><i class="fa fa-file-text-o"></i><br>Download Tool Talk</a></td>
           <td><a href="/safety"><i class="fa fa-warning"></i><br>Tool Safety</a></td>
         </tr>
