--- a/waterblast-automation/autopack-pro.html
+++ b/waterblast-automation/autopack-pro.html
@@ -175,9 +175,9 @@ master-slider: yes
           <ul class="list-unstyled basic">
             <h3>Documentation</h3>
             <li><a href="/assets/pdf/reference/AutoPack-PRO_job_box_contents.pdf" target="_blank"><i class="fa fa-file-text-o"></i> &nbsp;AutoPack-PRO Job Box Contents</a></li>
-            <li><a href="/assets/pdf/data-sheets/AutoPack_data_sheet.pdf" target="_blank"><i class="fa fa-file-text-o"></i> &nbsp;AutoPack Data Sheet</a></li>
-            <li><a href="/assets/pdf/data-sheets/ABX-PRO_data_sheet.pdf" target="_blank"><i class="fa fa-file-text-o"></i> &nbsp;ABX-PRO Data Sheet</a></li>
-            <li><a href="/assets/pdf/data-sheets/ProDrain_data_sheet.pdf" target="_blank"><i class="fa fa-file-text-o"></i> &nbsp;ProDrain Data Sheet</a></li>
+            <li><a href="/assets/pdf/data-sheets/AutoPack_data_sheet.pdf" target="_blank"><i class="fa fa-file-text-o"></i> &nbsp;AutoPack Brochure</a></li>
+            <li><a href="/assets/pdf/data-sheets/ABX-PRO_data_sheet.pdf" target="_blank"><i class="fa fa-file-text-o"></i> &nbsp;ABX-PRO Brochure</a></li>
+            <li><a href="/assets/pdf/data-sheets/ProDrain_data_sheet.pdf" target="_blank"><i class="fa fa-file-text-o"></i> &nbsp;ProDrain Brochure</a></li>
             <li><a href="/assets/pdf/tool-talks/ABX-PRO_tool_talk.pdf" target="_blank"><i class="fa fa-file-text-o"></i> &nbsp;ABX-PRO Tool Talk</a></li>
           </ul>
         </div>
@@ -294,7 +294,7 @@ master-slider: yes
     <div class="col-md-4 col-md-offset-1">
       <table>
         <tr>
-          <td><a href="/assets/pdf/data-sheets/AutoPack_data_sheet.pdf" target="_blank"><i class="fa fa-file-text-o"></i><br>Download Data Sheet</a></td>
+          <td><a href="/assets/pdf/data-sheets/AutoPack_data_sheet.pdf" target="_blank"><i class="fa fa-file-text-o"></i><br>Download Brochure</a></td>
 <!--          <td><a href="/assets/pdf/tool-talks/ABX-3L_tool_talk.pdf" target="_blank"><i class="fa fa-file-text-o"></i><br>Download Tool Talk</a></td>-->
           <td><a href="/safety"><i class="fa fa-warning"></i><br>Tool Safety</a></td>
         </tr>
