--- a/waterblast-automation/boiler-tube-cleaner.html
+++ b/waterblast-automation/boiler-tube-cleaner.html
@@ -159,7 +159,7 @@ master-slider: yes
         <div class="col-sm-4">
           <ul class="list-unstyled basic">
             <h3>Documentation</h3>
-            <li><a href="/assets/pdf/data-sheets/BTC-200_data_sheet.pdf" target="_blank"><i class="fa fa-file-text-o"></i> &nbsp;BTC-200 Data Sheet</a></li>
+            <li><a href="/assets/pdf/data-sheets/BTC-200_data_sheet.pdf" target="_blank"><i class="fa fa-file-text-o"></i> &nbsp;BTC-200 Brochure</a></li>
           </ul>
         </div>
         <aside class="col-sm-3 col-sm-offset-1 aside-box">
@@ -331,7 +331,7 @@ master-slider: yes
     <div class="col-md-4 col-md-offset-1">
       <table>
         <tr>
-          <td><a href="/assets/pdf/data-sheets/BTC-100_data_sheet.pdf" target="_blank"><i class="fa fa-file-text-o"></i><br>Download Data Sheet</a></td>
+          <td><a href="/assets/pdf/data-sheets/BTC-100_data_sheet.pdf" target="_blank"><i class="fa fa-file-text-o"></i><br>Download Brochure</a></td>
 <!--          <td><a href="/assets/pdf/tool-talks/abx-pro_tool_talk.pdf" target="_blank"><i class="fa fa-file-text-o"></i><br>Download Tool Talk</a></td>-->
           <td><a href="/safety"><i class="fa fa-warning"></i><br>Tool Safety</a></td>
         </tr>
