--- a/waterblast-automation/cable-swivel-tool.html
+++ b/waterblast-automation/cable-swivel-tool.html
@@ -149,7 +149,7 @@ master-slider: yes
             <div class="col-sm-4">
               <ul class="list-unstyled basic">
                 <h3>Documentation</h3>
-                <li><a href="/assets/pdf/data-sheets/fin_fan_data_sheet.pdf" target="_blank"><i class="fa fa-file-text-o"></i> &nbsp;Fin Fan Accessory Data Sheet</a></li>
+                <li><a href="/assets/pdf/data-sheets/fin_fan_data_sheet.pdf" target="_blank"><i class="fa fa-file-text-o"></i> &nbsp;Fin Fan Accessory Brochure</a></li>
                 <li><a href="/assets/pdf/tool-talks/FF_tool_talk.pdf" target="_blank"><i class="fa fa-file-text-o"></i> &nbsp;Fin Fan Accessory Tool Talk</a></li>
               </ul>
             </div>
