--- a/waterblast-automation/fin-fan-accessory.html
+++ b/waterblast-automation/fin-fan-accessory.html
@@ -165,7 +165,7 @@ master-slider: yes
             <div class="col-sm-4">
               <ul class="list-unstyled basic">
                 <h3>Documentation</h3>
-                <li><a href="/assets/pdf/data-sheets/FF_data_sheet.pdf" target="_blank"><i class="fa fa-file-text-o"></i> &nbsp;Fin Fan Accessory Data Sheet</a></li>
+                <li><a href="/assets/pdf/data-sheets/FF_data_sheet.pdf" target="_blank"><i class="fa fa-file-text-o"></i> &nbsp;Fin Fan Accessory Brochure</a></li>
                 <li><a href="/assets/pdf/tool-talks/FF_tool_talk.pdf" target="_blank"><i class="fa fa-file-text-o"></i> &nbsp;Fin Fan Accessory Tool Talk</a></li>
               </ul>
             </div>
@@ -253,7 +253,7 @@ master-slider: yes
     <div class="col-md-4 col-md-offset-1">
       <table>
         <tr>
-          <td><a href="/assets/pdf/data-sheets/fin_fan_data_sheet.pdf" target="_blank"><i class="fa fa-file-text-o"></i><br>Download Data Sheet</a></td>
+          <td><a href="/assets/pdf/data-sheets/fin_fan_data_sheet.pdf" target="_blank"><i class="fa fa-file-text-o"></i><br>Download Brochure</a></td>
           <td><a href="/assets/pdf/tool-talks/fin_fan_tool_talk.pdf" target="_blank"><i class="fa fa-file-text-o"></i><br>Download Tool Talk</a></td>
           <td><a href="/safety"><i class="fa fa-warning"></i><br>Tool Safety</a></td>
         </tr>
