--- a/waterblast-automation/hose-containment.html
+++ b/waterblast-automation/hose-containment.html
@@ -761,7 +761,7 @@ master-slider: yes
         <div class="col-sm-4">
           <ul class="list-unstyled basic">
             <h3>Documentation</h3>
-            <li><a href="/assets/pdf/data-sheets/HCS_data_sheet.pdf" target="_blank"><i class="fa fa-file-text-o"></i> &nbsp;Hose Containment System Data Sheet</a></li>
+            <li><a href="/assets/pdf/data-sheets/HCS_data_sheet.pdf" target="_blank"><i class="fa fa-file-text-o"></i> &nbsp;Hose Containment System Brochure</a></li>
             <li><a href="/assets/pdf/tool-talks/HCS_tool_talk.pdf" target="_blank"><i class="fa fa-file-text-o"></i> &nbsp;Hose Containment System Tool Talk</a> <em class="grey">- 03/2018</em></li>
           </ul>
         </div>
@@ -833,7 +833,7 @@ master-slider: yes
     <div class="col-md-4 col-md-offset-1">
       <table>
         <tr>
-         <td><a href="/assets/pdf/data-sheets/HCS_data_sheet.pdf" target="_blank"><i class="fa fa-file-text-o"></i><br>Download Data Sheet</a></td>
+         <td><a href="/assets/pdf/data-sheets/HCS_data_sheet.pdf" target="_blank"><i class="fa fa-file-text-o"></i><br>Download Brochure</a></td>
           <td><a href="/assets/pdf/tool-talks/HCS_tool_talk.pdf" target="_blank"><i class="fa fa-file-text-o"></i><br>Download Tool Talk</a></td>
           <td><a href="/safety"><i class="fa fa-warning"></i><br>Tool Safety</a></td>
         </tr>
