--- a/waterblast-automation/lightweight-positioner.html
+++ b/waterblast-automation/lightweight-positioner.html
@@ -138,11 +138,11 @@ master-slider: yes
         <div class="col-sm-4">
           <ul class="list-unstyled basic">
             <h3>Documentation</h3>
-            <li><a href="/assets/pdf/data-sheets/ABX-2L_data_sheet.pdf" target="_blank"><i class="fa fa-file-text-o"></i> &nbsp;AutoBox ABX-2L Data Sheet</a></li>
-            <li><a href="/assets/pdf/data-sheets/ABX-3L_data_sheet.pdf" target="_blank"><i class="fa fa-file-text-o"></i> &nbsp;AutoBox ABX-3L Data Sheet</a></li>
+            <li><a href="/assets/pdf/data-sheets/ABX-2L_data_sheet.pdf" target="_blank"><i class="fa fa-file-text-o"></i> &nbsp;AutoBox ABX-2L Brochure</a></li>
+            <li><a href="/assets/pdf/data-sheets/ABX-3L_data_sheet.pdf" target="_blank"><i class="fa fa-file-text-o"></i> &nbsp;AutoBox ABX-3L Brochure</a></li>
             <li><a href="/assets/pdf/tool-talks/ABX-2L_tool_talk.pdf" target="_blank"><i class="fa fa-file-text-o"></i> &nbsp;AutoBox ABX-2L Tool Talk</a></li>
             <li><a href="/assets/pdf/tool-talks/ABX-3L_tool_talk.pdf" target="_blank"><i class="fa fa-file-text-o"></i> &nbsp;AutoBox ABX-3L Tool Talk</a></li>
-            <li><a href="/assets/pdf/data-sheets/AutoPack_data_sheet.pdf" target="_blank"><i class="fa fa-file-text-o"></i> &nbsp;AutoPack Data Sheet</a></li>
+            <li><a href="/assets/pdf/data-sheets/AutoPack_data_sheet.pdf" target="_blank"><i class="fa fa-file-text-o"></i> &nbsp;AutoPack Brochure</a></li>
           </ul>
             <p>The Lightweight Positioner is an accessory product for the AutoBox family of hose tractors. Usage details can be found in documentation for AutoBox products.</p>
         </div>
@@ -333,7 +333,7 @@ master-slider: yes
     <div class="col-md-4 col-md-offset-1">
       <table>
         <tr>
-<!--          <td><a href="/assets/pdf/data-sheets/BB-100_data_sheet.pdf" target="_blank"><i class="fa fa-file-text-o"></i><br>Download Data Sheet</a></td>-->
+<!--          <td><a href="/assets/pdf/data-sheets/BB-100_data_sheet.pdf" target="_blank"><i class="fa fa-file-text-o"></i><br>Download Brochure</a></td>-->
 <!--          <td><a href="/assets/pdf/tool-talks/abx-pro_tool_talk.pdf" target="_blank"><i class="fa fa-file-text-o"></i><br>Download Tool Talk</a></td>-->
           <td><a href="/safety"><i class="fa fa-warning"></i><br>Tool Safety</a></td>
         </tr>
