--- a/waterblast-automation/navigator-small-pipe-cleaning.html
+++ b/waterblast-automation/navigator-small-pipe-cleaning.html
@@ -183,7 +183,7 @@ master-slider: yes
         <div class="col-sm-4">
           <ul class="list-unstyled basic">
             <h3>Documentation</h3>
-            <li><a href="/assets/pdf/data-sheets/NAV_data_sheet.pdf" target="_blank"><i class="fa fa-file-text-o"></i> &nbsp;Navigator Data Sheet</a></li>
+            <li><a href="/assets/pdf/data-sheets/NAV_data_sheet.pdf" target="_blank"><i class="fa fa-file-text-o"></i> &nbsp;Navigator Brochure</a></li>
             <li><a href="/assets/pdf/tool-talks/NAV_tool_talk.pdf" target="_blank"><i class="fa fa-file-text-o"></i> &nbsp;Navigator Tool Talk</a></li>
           </ul>
         </div>
@@ -292,7 +292,7 @@ master-slider: yes
     <div class="col-md-4 col-md-offset-1">
       <table>
         <tr>
-          <td><a href="/assets/pdf/data-sheets/NAV_data_sheet.pdf" target="_blank"><i class="fa fa-file-text-o"></i><br>Download Data Sheet</a></td>
+          <td><a href="/assets/pdf/data-sheets/NAV_data_sheet.pdf" target="_blank"><i class="fa fa-file-text-o"></i><br>Download Brochure</a></td>
           <td><a href="/assets/pdf/tool-talks/NAV_tool_talk.pdf" target="_blank"><i class="fa fa-files-o"></i><br>Download Tool Talk</a></td>
           <td><a href="/safety"><i class="fa fa-warning"></i><br>Tool Safety</a></td>
         </tr>
