--- a/waterblast-automation/propositioner.html
+++ b/waterblast-automation/propositioner.html
@@ -139,8 +139,8 @@ master-slider: yes
         <div class="col-sm-4">
           <ul class="list-unstyled basic">
             <h3>Documentation</h3>
-            <li><a href="/assets/pdf/data-sheets/ProPositioner_data_sheet.pdf" target="_blank"><i class="fa fa-file-text-o"></i> &nbsp;ProPositioner Data Sheet</a></li>
-            <li><a href="/assets/pdf/data-sheets/ABX-PRO_data_sheet.pdf" target="_blank"><i class="fa fa-file-text-o"></i> &nbsp;AutoBox ABX-PRO Data Sheet</a></li>
+            <li><a href="/assets/pdf/data-sheets/ProPositioner_data_sheet.pdf" target="_blank"><i class="fa fa-file-text-o"></i> &nbsp;ProPositioner Brochure</a></li>
+            <li><a href="/assets/pdf/data-sheets/ABX-PRO_data_sheet.pdf" target="_blank"><i class="fa fa-file-text-o"></i> &nbsp;AutoBox ABX-PRO Brochure</a></li>
             <li><a href="/assets/pdf/tool-talks/ABX-PRO_tool_talk.pdf" target="_blank"><i class="fa fa-file-text-o"></i> &nbsp;AutoBox ABX-PRO Tool Talk</a></li>            
           </ul>
         </div>
@@ -207,7 +207,7 @@ master-slider: yes
     <div class="col-md-4 col-md-offset-1">
       <table>
         <tr>
-<!--          <td><a href="/assets/pdf/data-sheets/BB-100_data_sheet.pdf" target="_blank"><i class="fa fa-file-text-o"></i><br>Download Data Sheet</a></td>-->
+<!--          <td><a href="/assets/pdf/data-sheets/BB-100_data_sheet.pdf" target="_blank"><i class="fa fa-file-text-o"></i><br>Download Brochure</a></td>-->
           <td><a href="/assets/pdf/tool-talks/abx-pro_tool_talk.pdf" target="_blank"><i class="fa fa-file-text-o"></i><br>Download Tool Talk</a></td>
           <td><a href="/safety"><i class="fa fa-warning"></i><br>Tool Safety</a></td>
         </tr>
