--- a/waterblast-automation/rigid-lance-machine.html
+++ b/waterblast-automation/rigid-lance-machine.html
@@ -393,7 +393,7 @@ master-slider: yes
       <table>
         <tr>
           <!--
-          <td><a href="#" target="_blank"><i class="fa fa-file-text-o"></i><br>Download Data Sheet</a></td>
+          <td><a href="#" target="_blank"><i class="fa fa-file-text-o"></i><br>Download Brochure</a></td>
           <td><a href="#"><i class="fa fa-files-o"></i><br>Download Case Study</a></td>
 -->
           <td><a href="/safety"><i class="fa fa-warning"></i><br>Tool Safety</a></td>
