--- a/waterblast-automation/striker-lightweight.html
+++ b/waterblast-automation/striker-lightweight.html
@@ -180,7 +180,7 @@ master-slider: yes
         <div class="col-sm-4">
           <ul class="list-unstyled basic">
             <h3>Documentation</h3>
-            <li><a href="/assets/pdf/data-sheets/striker_skrl_data_sheet.pdf" target="_blank"><i class="fa fa-file-text-o"></i> &nbsp;Lightweight Striker Data Sheet</a></li>
+            <li><a href="/assets/pdf/data-sheets/striker_skrl_data_sheet.pdf" target="_blank"><i class="fa fa-file-text-o"></i> &nbsp;Lightweight Striker Brochure</a></li>
             <li><a href="/assets/pdf/tool-talks/striker_skrl_tool_talk.pdf" target="_blank"><i class="fa fa-file-text-o"></i> &nbsp;Lightweight Striker Tool Talk</a></li>
 <!--            <li><a href="https://rise.articulate.com/share/rNzIsFHC_Z1xT-JHwgf9U22HLHAvINT9" target="_blank"><i class="fa fa-graduation-cap"></i> &nbsp;Lightweight Striker Product Training</a></li>-->
           </ul>
@@ -288,10 +288,12 @@ master-slider: yes
         <a href="/striker"><img class="img-responsive" src="/assets/img/product/thumb-striker-02.jpg" alt="Striker SKR-STD remote shotgun system">
         <h5>Striker</h5></a>
       </div>
+<!--
       <div class="item">
         <a href="/tracked-striker"><img class="img-responsive" src="/assets/img/product/thumb-striker-trk-01.jpg" alt="Tracked Striker SKR-TRK remote shotgun system">
         <h5>Tracked Striker</h5></a>
       </div>
+-->
       <div class="item">
         <a href="/lightweight-positioner"><img class="img-responsive" src="/assets/img/product/thumb-lwp-02.jpg" alt="Lightweight positioner for exchanger cleaning">
         <h5>Lightweight Positioner</h5></a>
@@ -324,7 +326,7 @@ master-slider: yes
     <div class="col-md-4 col-md-offset-1">
       <table>
         <tr>
-          <td><a href="/assets/pdf/data-sheets/striker_skrl_data_sheet.pdf" target="_blank"><i class="fa fa-file-text-o"></i><br>Download Data Sheet</a></td>
+          <td><a href="/assets/pdf/data-sheets/striker_skrl_data_sheet.pdf" target="_blank"><i class="fa fa-file-text-o"></i><br>Download Brochure</a></td>
           <td><a href="/assets/pdf/tool-talks/striker_skrl_tool_talk.pdf" target="_blank"><i class="fa fa-file-text-o"></i><br>Download Tool Talk</a></td>
         </tr>
       </table>
