--- a/waterblast-automation/torus-tr-130.html
+++ b/waterblast-automation/torus-tr-130.html
@@ -190,7 +190,7 @@ master-slider: yes
         <div class="col-sm-4">
           <ul class="list-unstyled basic">
             <h3>Documentation</h3>
-            <li><a href="/assets/pdf/data-sheets/TR-130_data-sheet.pdf" target="_blank"><i class="fa fa-file-text-o"></i> &nbsp;TR-130 Data Sheet</a></li>
+            <li><a href="/assets/pdf/data-sheets/TR-130_data-sheet.pdf" target="_blank"><i class="fa fa-file-text-o"></i> &nbsp;TR-130 Brochure</a></li>
             <li><a href="/assets/pdf/tool-talks/TR-130_tool_talk.pdf" target="_blank"><i class="fa fa-file-text-o"></i> &nbsp;TR-130 Tool Talk</a></li>
           </ul>
         </div>
@@ -379,7 +379,7 @@ master-slider: yes
     <div class="col-md-4 col-md-offset-1">
       <table>
         <tr>
-          <td><a href="/assets/pdf/data-sheets/TR-130_data-sheet.pdf" target="_blank"><i class="fa fa-file-text-o"></i><br>Download Data Sheet</a></td>
+          <td><a href="/assets/pdf/data-sheets/TR-130_data-sheet.pdf" target="_blank"><i class="fa fa-file-text-o"></i><br>Download Brochure</a></td>
           <td><a href="/assets/pdf/tool-talks/TR-130_tool_talk.pdf" target="_blank"><i class="fa fa-files-o"></i><br>Download Tool Talk</a></td>
           <td><a href="/safety"><i class="fa fa-warning"></i><br>Tool Safety</a></td>
         </tr>
