--- a/waterblast-automation/torus-tr-200.html
+++ b/waterblast-automation/torus-tr-200.html
@@ -184,7 +184,7 @@ master-slider: yes
         <div class="col-sm-4">
           <ul class="list-unstyled basic">
             <h3>Documentation</h3>
-            <li><a href="/assets/pdf/data-sheets/TR-200_data-sheet.pdf" target="_blank"><i class="fa fa-file-text-o"></i> &nbsp;TR-200 Data Sheet</a></li>
+            <li><a href="/assets/pdf/data-sheets/TR-200_data-sheet.pdf" target="_blank"><i class="fa fa-file-text-o"></i> &nbsp;TR-200 Brochure</a></li>
             <li><a href="/assets/pdf/tool-talks/TR-200_tool_talk.pdf" target="_blank"><i class="fa fa-file-text-o"></i> &nbsp;TR-200 Tool Talk</a></li>
           </ul>
         </div>
@@ -337,7 +337,7 @@ master-slider: yes
     <div class="col-md-4 col-md-offset-1">
       <table>
         <tr>
-          <td><a href="/assets/pdf/data-sheets/TR-200_data-sheet.pdf" target="_blank"><i class="fa fa-file-text-o"></i><br>Download Data Sheet</a></td>
+          <td><a href="/assets/pdf/data-sheets/TR-200_data-sheet.pdf" target="_blank"><i class="fa fa-file-text-o"></i><br>Download Brochure</a></td>
           <td><a href="/assets/pdf/tool-talks/TR-200_tool_talk.pdf" target="_blank"><i class="fa fa-files-o"></i><br>Download Tool Talk</a></td>
           <td><a href="/safety"><i class="fa fa-warning"></i><br>Tool Safety</a></td>
         </tr>
