Age of Control-phase2, WJTA

--- a/waterblast-automation/blackhawk-concrete-demo_OBS.html
+++ b/waterblast-automation/blackhawk-concrete-demo_OBS.html
@@ -3,7 +3,7 @@ layout: default
 page-type: product
 title: StoneAge Blackhawk BHK-100 Concrete Hydro-demolition
 excerpt: The Blackhawk BHK-100 is a cost-effective, safe alternative to traditional methods of removing and scarifying concrete.
-permalink: /blackhawk
+permalink: /blackhawk-OBS
 master-slider: yes
 ---
 
