--- a/waterblast-automation/striker-tracked-OBS.html
+++ b/waterblast-automation/striker-tracked-OBS.html
@@ -3,7 +3,7 @@ layout: default
 page-type: product
 title: StoneAge Tracked Striker Remote Shotgunning
 excerpt: The Tracked Striker is an automated hydroblasting system designed to replace manual shotgunning applications with an emphasis on safety, usability, and easy assembly.
-permalink: /tracked-striker-discontinued
+permalink: /tracked-striker-OBS
 master-slider: yes
 ---
 
