--- a/waterblast-automation/floor-cleaner_OBS.html
+++ b/waterblast-automation/floor-cleaner_OBS.html
@@ -3,7 +3,7 @@ layout: default
 page-type: product
 title: StoneAge High Pressure Floor Cleaner
 excerpt: The FCSV, FCSG self-rotary walk-behind surface cleaners are powerful enough to scarify concrete.
-permalink: /floor-cleaner
+permalink: /floor-cleaner-OBS
 master-slider: yes
 ---
 
